Fri Feb  4 12:11:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/RTComponentServer/RTConfig_Manager.h:
          Include SString.h instead of SStringfwd.h to fix compile errors with
          CBuilderX

Thu Feb  3 20:01:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/Segment_Timer/Segment_Timer.mpc:
          Removed TAO_ROOT again, the gnu template has been changed so that
          when CIAO is detected, also TAO_ROOT is set

Thu Feb  3 12:32:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/ciao/NodeApplication_Impl.h:
          Added include of ace/SString.h to fix compile errors with CBuilderX

Thu Feb  3 10:11:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/Segment_Timer/Segment_Timer.mpc:
          Added $(TAO_ROOT) so that MPC creates a correct GNU makefile

Wed Feb  2 19:48:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rules.ciao.GNU:
          Fixed error in this file

Wed Feb  2 09:39:25 2005  Chad Elliott  <elliott_c@ociweb.com>

        * CCF/CCF/CIDL/CIDL.mpc:
        * CCF/CCF/CodeGenerationKit/CodeGenerationKit.mpc:
        * CCF/CCF/CompilerElements/CompilerElements.mpc:
        * CCF/CCF/IDL2/IDL2.mpc:
        * CCF/CCF/IDL3/IDL3.mpc:
        * CIDLC/CIDLC.mpc:

          Converted includes to incorporate $(CIAO_ROOT).  This allows the
          GNUACEProjectCreator to recognize these projects as CIAO projects.

        * DAnCE/ciao/CCM_Core.mpc:
        * ciao/CCM_Core.mpc:
        * tools/IDL3_to_IDL2/IDL3_to_IDL2.mpc:
        * tools/Segment_Timer/Segment_Timer.mpc:

          Added a bogus include of $(CIAO_ROOT).  This allows the
          GNUACEProjectCreator to recognize these projects as CIAO projects.

Wed Feb  2 14:33:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rules.ciao.GNU:
          New rules file to set the correct SOVERSION and SONAME values
